...
  return (
    <>
      <Stack.Screen options={options} />
      <FormScrollView contentContainerStyle={styles.screen}>
        <Pressable
          accessibilityRole="button"
          testID="add-switch-type"
          onPress={switchType}
          style={local.switchLink}
        >
          <Text style={styles.link}>{TEXT[type].switchLink}</Text>
        </Pressable>

...
